--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,7 @@ h6 {
 }
 
 #hero:before {
-  content: "";
+  /* content: ""; */
   /* background: rgba(5, 13, 24, 0.3); */
   position: absolute;
   bottom: 0;
